--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -21,6 +21,13 @@ body {
     width: 300px;
     background-color: #000000; 
     color: #ffffff; 
+    transition: transform 0.3s ease;
+    z-index: 1000; 
+    background-color: #000000; 
+}
+
+.notes__sidebar.hidden {
+    transform: translateX(100%);
 }
 
 .notes__add {
@@ -31,6 +38,7 @@ body {
     cursor: pointer;
     font-size: 1.25em;
     font-weight: bold;
+    margin-top: 0.25em;
     margin-bottom: 1em;
     padding: 0.75em 0;
     width: 100%;
@@ -96,6 +104,10 @@ body {
     font-weight: bold;
 }
 
+.notes__toggle-sidebar {
+    display: none; 
+}
+
 .notes__body {
     flex-grow: 1;
     font-size: 1.2em;
@@ -137,4 +149,62 @@ body {
 }
 .notes__delete:hover {
     background: #c5642c;
+}
+
+.notes__buttons-text {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.notes__search-bar {
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    padding: 0.6em 0em;
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .notes__sidebar {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100%;
+        transform: translateX(100%);
+        z-index: 1000; 
+    }
+
+    .notes__sidebar.visible {
+        transform: translateX(0);
+    }
+
+    .notes__preview {
+        padding: 1em;
+        flex-grow: 1;
+    }
+
+    .notes__toggle-sidebar {
+        display: block;
+        opacity: 0.7;
+        background: #009577;
+        border: none;
+        border-radius: 7px;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 1.25em;
+        font-weight: bold;
+        padding: 0.69em 1em;
+        position: fixed; 
+        top: 1.03em;
+        right: .8em;
+        z-index: 1001; 
+    }
+
+    .notes__toggle-sidebar:hover {
+        background: #00af8c;
+    }
 }
