--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -168,6 +168,32 @@ body {
     width: 100%;
 }
 
+.toast{
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -100px;
+    color: #fff;
+    text-align: left;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 7px;
+    border: #000000 2px solid;
+    padding: 16px;
+    position: fixed;
+    z-index: 1001; 
+    top: 1em;
+    right: 1em;
+    font-size: 1em;
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.toast.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+
 @media (max-width: 768px) {
     .notes__sidebar {
         position: fixed;
@@ -207,4 +233,6 @@ body {
     .notes__toggle-sidebar:hover {
         background: #00af8c;
     }
+
+    
 }
