--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -14,16 +14,16 @@ body {
 }
 
 .notes__sidebar {
-    border-left: 2px solid #dddddd; 
+    border-left: 2px solid #dddddd;
     flex-shrink: 0;
     overflow-y: auto;
     padding: 1em;
     width: 300px;
-    background-color: #000000; 
-    color: #ffffff; 
+    background-color: #000000;
+    color: #ffffff;
     transition: transform 0.3s ease;
-    z-index: 1000; 
-    background-color: #000000; 
+    z-index: 1000;
+    background-color: #000000;
 }
 
 .notes__sidebar.hidden {
@@ -105,7 +105,7 @@ body {
 }
 
 .notes__toggle-sidebar {
-    display: none; 
+    display: none;
 }
 
 .notes__body {
@@ -147,6 +147,7 @@ body {
 .notes__edit:hover {
     background: #5f47d5;
 }
+
 .notes__delete:hover {
     background: #c5642c;
 }
@@ -168,7 +169,7 @@ body {
     width: 100%;
 }
 
-.toast{
+.toast {
     visibility: hidden;
     min-width: 250px;
     margin-left: -100px;
@@ -177,12 +178,12 @@ body {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 7px;
-    border: #000000 2px solid;
+    border: #000000 0.5px solid;
     padding: 16px;
     position: fixed;
-    z-index: 1001; 
-    top: 1em;
-    right: 1em;
+    z-index: 1001;
+    top: 1.3em;
+    right: 21.5em;
     font-size: 1em;
     opacity: 0;
     transition: opacity 0.5s ease, visibility 0.5s ease;
@@ -193,6 +194,84 @@ body {
     opacity: 1;
 }
 
+.notes__modal-container {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin: 20px;
+}
+
+.notes__modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+.notes__modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+}
+
+.notes__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.notes__modal-exit {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: -10px;
+    margin-right: -10px;
+}
+
+.notes__modal-exit:hover,
+.notes__modal-exit:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.notes__modal-yes,
+.notes__modal-no {
+    background-color: #22db28;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.notes__modal-no {
+    background-color: #ee1405;
+}
+
+.notes__modal-yes:hover,
+.notes__modal-no:hover {
+    opacity: 0.8;
+
+}
+
 
 @media (max-width: 768px) {
     .notes__sidebar {
@@ -201,7 +280,7 @@ body {
         right: 0;
         height: 100%;
         transform: translateX(100%);
-        z-index: 1000; 
+        z-index: 1000;
     }
 
     .notes__sidebar.visible {
@@ -224,15 +303,17 @@ body {
         font-size: 1.25em;
         font-weight: bold;
         padding: 0.69em 1em;
-        position: fixed; 
+        position: fixed;
         top: 1.03em;
         right: .8em;
-        z-index: 1001; 
+        z-index: 1001;
     }
 
     .notes__toggle-sidebar:hover {
         background: #00af8c;
     }
 
-    
+    .toast {
+        right: 1em;
+    }
 }
