--- a/frontend/src/pages/addnote/addnote.css
+++ b/frontend/src/pages/addnote/addnote.css
@@ -158,6 +158,30 @@ body {
     opacity: 0.8;
 }
 
+.toast {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -100px;
+    color: #fff;
+    text-align: left;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 7px;
+    border: #000000 0.5px solid;
+    padding: 16px;
+    position: fixed;
+    z-index: 1001;
+    top: 1.3em;
+    right: 0.5em;
+    font-size: 1em;
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.toast.show {
+    visibility: visible;
+    opacity: 1;
+}
 
 @media (max-width: 768px) {
     .notes__preview {
