--- a/frontend/src/pages/signup/signup.css
+++ b/frontend/src/pages/signup/signup.css
@@ -11,7 +11,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 100px;
 }
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"] {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
@@ -32,4 +32,27 @@ input[type="submit"] {
 }
 input[type="submit"]:hover {
     background-color: #45a049;
+}
+.toast {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -100px;
+    color: #fff;
+    text-align: left;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 7px;
+    border: #000000 0.5px solid;
+    padding: 16px;
+    position: fixed;
+    z-index: 1001;
+    top: 1.3em;
+    right: 21.5em;
+    font-size: 1em;
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+.toast.show {
+    visibility: visible;
+    opacity: 1;
 }
